opam-version: "1.2"
version: "1.11"
maintainer: "jeremie@dimino.org"
authors: ["Jérémie Dimino"]
homepage: "https://github.com/diml/lambda-term"
bug-reports: "https://github.com/diml/lambda-term/issues"
dev-repo: "git://github.com/diml/lambda-term.git"
license: "BSD3"
build: [
  ["./configure" "--prefix" prefix "--disable-examples"]
  [make]
]
install: [[make "install"]]
remove: [["ocamlfind" "remove" "lambda-term"]]
depends: [
  "ocamlfind"
  "lwt" {>= "2.4.0"}
  "zed" {>= "1.2"}
  "react" {>= "1.0.0"}
  "ocamlbuild" {build}
]
available: [ ocaml-version >= "4.01" ]
