opam-version: "1.2"
version: "1.11"
maintainer: "jeremie@dimino.org"
authors: ["Jérémie Dimino"]
homepage: "https://github.com/diml/lambda-term"
bug-reports: "https://github.com/diml/lambda-term/issues"
dev-repo: "git://github.com/diml/lambda-term.git"
license: "BSD3"
build: [
  ["jbuilder" "build" "@install" "--root" "." "--only" "lambda-term" "-j" jobs]
]
depends: [
  "lwt"   {>= "3.0.0"}
  "zed"   {>= "1.2"}
  "lwt_react" {>= "1.0.0"}
]
available: [ ocaml-version >= "4.02.3" ]
