opam-version: "1.2"
maintainer: "jeremie@dimino.org"
authors: ["Jérémie Dimino"]
homepage: "https://github.com/ocaml-community/lambda-term"
bug-reports: "https://github.com/ocaml-community/lambda-term/issues"
dev-repo: "git://github.com/ocaml-community/lambda-term.git"
license: "BSD3"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "lwt"   {>= "2.7.0"}
  "lwt_log"
  "react"
  "zed"   {>= "1.2"}
  "camomile" {>= "0.8.6"}
  "lwt_react"
  "dune" {build & >= "1.0.0"}
]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
available: [ ocaml-version >= "4.02.3" ]
